add ability for player to select either rock, paper or scissors by clicking the button. Also had the robots random selection of rock, paper or scissors

--- a/game Robot/gameRobot.html
+++ b/game Robot/gameRobot.html
@@ -27,12 +27,17 @@
 
         </section>
 
+        <section>
+            <h3>Result</h3>
+        </section>
+
         <section class="selections">
             <p>Please select an option:</p>
             <button id="selectRockBtn">Rock</button>
             <button id="selectPaperBtn">Paper</button>
             <button id="selectScissorBtn">Scissors</button>
         </section>
+
     </div>
 
     <script src="/game Robot/gameRobot.js"></script>
