when both the robot and computer make the same selection the border of the icon changes to turquoise and the result text changes to 'TIE'

--- a/game Robot/gameRobot.html
+++ b/game Robot/gameRobot.html
@@ -14,9 +14,9 @@
 
     <div class="gameSection">
         <section class="playerSection"> 
-            <h2>Shaial</h2>
+            <h2>Shaial: <span>0</span></h2>
             <p> vs </p>
-            <h2>Robot</h2>
+            <h2>Robot: <span>0</span></h2>
         </section>
 
         <section class="iconSection">
@@ -28,7 +28,7 @@
         </section>
 
         <section>
-            <h3>Result</h3>
+            <h3 id="result">Result</h3>
         </section>
 
         <section class="selections">
