--- a/game Robot/gameRobot.html
+++ b/game Robot/gameRobot.html
@@ -14,9 +14,9 @@
 
     <div class="gameSection">
         <section class="playerSection"> 
-            <h2>Shaial: <span>0</span></h2>
+            <h2>Shaial: <span id="playerScoreResult">0</span></h2>
             <p> vs </p>
-            <h2>Robot: <span>0</span></h2>
+            <h2>Robot: <span id="robotScoreResult">0</span></h2>
         </section>
 
         <section class="iconSection">
