add logic to implement a 'next round' button which appears when either the robot or player wins a point, this also removes the selection element to prevent the user selecting another option before the next round starts

--- a/game Robot/gameRobot.html
+++ b/game Robot/gameRobot.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Rock Paper Scissors </title>
+    
     <link rel="stylesheet" href="/game Robot/gameRobot.css">
 </head>
 <body>
@@ -14,9 +15,9 @@
 
     <div class="gameSection">
         <section class="playerSection"> 
-            <h2>Shaial: <span id="playerScoreResult">0</span></h2>
+            <h2>Shaial: <span id="playerScoreResult">0</span> <span>/ 3</span></h2>
             <p> vs </p>
-            <h2>Robot: <span id="robotScoreResult">0</span></h2>
+            <h2>Robot: <span id="robotScoreResult">0</span> <span> / 3</span></h2>
         </section>
 
         <section class="iconSection">
@@ -36,6 +37,11 @@
             <button id="selectRockBtn">Rock</button>
             <button id="selectPaperBtn">Paper</button>
             <button id="selectScissorBtn">Scissors</button>
+        </section>
+
+        <section id="nextRoundSection">
+
+
         </section>
 
     </div>
