add button for removal of users / style on css

--- a/index/index.html
+++ b/index/index.html
@@ -45,7 +45,10 @@
 
 
            </table>
+
         </section>
+
+        <button class="resetLeaderBoard"> Reset Leaderboard </button>
 
     </main>
 
