--- a/game Robot/gameRobot.html
+++ b/game Robot/gameRobot.html
@@ -15,7 +15,7 @@
 
     <div class="gameSection">
         <section class="playerSection"> 
-            <h2>Shaial: <span id="playerScoreResult">0</span> <span>/ 3</span></h2>
+            <h2 id="currentPlayer">Shaial: <span id="playerScoreResult">0</span> <span>/ 3</span></h2>
             <p> vs </p>
             <h2>Robot: <span id="robotScoreResult">0</span> <span> / 3</span></h2>
         </section>
@@ -46,6 +46,6 @@
 
     </div>
 
-    <script src="/game Robot/gameRobot.js"></script>
+    <script type="module" src="/game Robot/gameRobot.js"></script>
 </body>
 </html>
