--- a/index/index.html
+++ b/index/index.html
@@ -56,6 +56,6 @@
         <h5> Created by Shaial Miah</h5>
     </footer>
     
-    <script src="script.js"></script>
+    <script type="module" src="script.js"></script>
 </body>
 </html>
